--- a/3/package.json
+++ b/3/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "apollo-server": "^2.9.9",
     "apollo-server-testing": "^2.9.9",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.0.2"
   },
   "devDependencies": {
     "jest": "^24.9.0"
