--- a/3/package.json
+++ b/3/package.json
@@ -15,7 +15,8 @@
     "graphql": "^14.5.8",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.0.2",
-    "graphql-tools": "^4.0.6"
+    "graphql-tools": "^4.0.6",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "jest": "^24.9.0"
