--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: node_js
 node_js:
     - "10"
-before_install:
+install:
     - cd ./2
+    - npm install
+    - cd ../3
+    - npm install
+before-script:
+    - cd ..
 script:
+    - cd ./2
     - npm run lint
     - npm run test:unit
+    - cd ../3
+    - npm test
