--- a/3/package.json
+++ b/3/package.json
@@ -16,7 +16,8 @@
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.0.2",
     "graphql-tools": "^4.0.6",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "neo4j-driver": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^24.9.0"
