--- a/3/package.json
+++ b/3/package.json
@@ -17,7 +17,8 @@
     "graphql-shield": "^7.0.2",
     "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
-    "neo4j-driver": "^4.0.0"
+    "neo4j-driver": "^4.0.0",
+    "neo4j-graphql-js": "^2.10.2"
   },
   "devDependencies": {
     "jest": "^24.9.0"
