--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: node_js
 node_js:
     - "10"
+env:
+  - NEO4J_VERSION="3.5.14"
+before_install:
+  - wget dist.neo4j.org/neo4j-community-$NEO4J_VERSION-unix.tar.gz
+  - tar -xzf neo4j-community-$NEO4J_VERSION-unix.tar.gz
+  - neo4j-community-$NEO4J_VERSION/bin/neo4j-admin set-initial-password graphdb
+  - neo4j-community-$NEO4J_VERSION/bin/neo4j start
 install:
     - cd ./2
     - npm install
