Add npm script to seed database
For easier setup. Closing the driver will also terminate the script.

--- a/3/package.json
+++ b/3/package.json
@@ -4,6 +4,8 @@
   "description": "Test-drive the development of a GraphQL server.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "seed": "node script/seed.js",
     "test": "jest"
   },
   "keywords": [],
